--- a/app.html
+++ b/app.html
@@ -110,7 +110,7 @@
               </div>
               
               <div class="col-xs-6 text-left">
-                <input id="switch-size" type="checkbox" checked data-size="mini">
+                <input id="switch-size" type="checkbox" data-size="mini">
               </div>
           </div><!--row-->
               
